--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next-pwa": "^5.4.4",
     "nextjs-progressbar": "^0.0.13",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
