--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": "next",
+  "rules": {
+    "react/no-unknown-property": "off",
+    "react/no-unescaped-entities": "off"
+    "@next/next/link-passhref": "off"
+    "@next/next/no-page-custom-font": "off"
+  }
 }
